# hs-kemono-friends

./: README.md  hello.kemono  hs-kemono-friends.cabal  stack.yaml
src/: Main.hs
